manifests/english-clusterIP.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "english-greeter-service"
  namespace: "default"
  labels:
    service: "english-greeter"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "english-greeter"
  type: "ClusterIP"
